src/objects/Check_List_Header__c.object
<CustomObject>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Check List Header</relationshipLabel>
        <relationshipName>Check_List_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEVELOP-Pre-Contract</fullName>
                </value>
                <value>
                    <fullName>INITIATE-Turnover</fullName>
                </value>
                <value>
                    <fullName>PLAN-Pre-Construction</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Delivery</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Installation</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Commissioning</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Punchlist</fullName>
                </value>
                <value>
                    <fullName>CLOSE-Closeout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Items_Completed__c</fullName>
        <label>Total Items Completed</label>
        <summaryFilterItems>
            <field>Check_List_Item__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Check_List_Item__c.Is_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Check_List_Item__c.Check_List_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <label>Total Items</label>
        <summaryFilterItems>
            <field>Check_List_Item__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Check_List_Item__c.Check_List_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Check List Header</label>
    <nameField>
        <displayFormat>CH-{00000}</displayFormat>
        <label>Check List Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check List Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>